client/src/components/Header/Header.module.css
.container {
  height: 100px;
}

.header {
  width: 100vw;
  padding: 15px;
  position: fixed;
  z-index: 1000;
  background-color: var(--templatePurple);
  margin-bottom: 20px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.headerElements {
  max-width: 1500px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  gap: 30px;
  color: white;
}

.title {
  display: flex;
  align-items: center;
  gap: 18px;
}

.logo {
  font-size: 2.2em;
  font-weight: bold;
}

.categoriesList {
  list-style-type: none;
  display: flex;
  gap: 20px;
  padding: 0;
}

.categoriesList > li {
  text-transform: uppercase;
  cursor: pointer;
}

@media (max-width: 1200px) {
  .header {
    font-size: 0.9em;
    gap: 20px;
  }

  .logo {
    font-size: 2em;
  }

  .categories {
    display: none;
  }
}

@media (max-width: 992px) {
  .logo {
    font-size: 1.6em;
  }
}

@media (max-width: 767px) {
  .logo {
    font-size: 1.5em;
  }

  .header {
    padding: 10px 5px;
  }

  .headerElements {
    gap: 10px;
    justify-content: space-around;
  }

  .title {
    gap: 10px;
  }
}

